add comparators guide

--- a/content/index.adoc
+++ b/content/index.adoc
@@ -19,7 +19,7 @@ The primary forum for discussing Clojure is the http://groups.google.com/group/c
 https://twitter.com/richhickey[Rich Hickey] +
 CTO http://cognitect.com/[Cognitect], providers of http://cognitect.com/support-document#platform-support[enterprise support] for Clojure
 
-=== Use Clojure 
+=== Use Clojure
 
 
 * <<about/rationale#,Rationale>>
@@ -29,8 +29,9 @@ CTO http://cognitect.com/[Cognitect], providers of http://cognitect.com/support-
 * <<reference/documentation#,Documentation>>
 * <<about/clojurescript#,ClojureScript>>
 * <<about/clojureclr#,ClojureCLR>>
+* <<guides/comparators#,Comparators>>
 
-=== Join the Community 
+=== Join the Community
 
 
 * http://groups.google.com/group/clojure[Clojure Google Group]
