update page type

--- a/content/guides/comparators.adoc
+++ b/content/guides/comparators.adoc
@@ -1,8 +1,9 @@
 = Comparators Guide
 Andy Fingerhut
 2013-04-01
-:jbake-type: page
+:type: guides
 :toc: macro
+:icons: font
 
 ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 
