update page type

--- a/content/events/2016/clojurewest.adoc
+++ b/content/events/2016/clojurewest.adoc
@@ -1,7 +1,7 @@
 = Clojure/west
 Cognitect
 2016-04-15
-:jbake-type: post
+:jbake-type: event
 :jbake-edition: 2016
 :jbake-link: http://clojurewest.org
 :jbake-location: Seattle, Washington
