--- a/content/community/start_group.adoc
+++ b/content/community/start_group.adoc
@@ -23,13 +23,11 @@ A user group needs the following elements:
 
 * Google Calendar - http://www.google.com/calendar[http://www.google.com/calendar]
 * Wordpress - http://wordpress.com[http://wordpress.com] - free blog and web site
-* Posterous - https://posterous.com[https://posterous.com] - free blog and web site
 * Meetup - http://meetup.com/[http://meetup.com] - meeting discovery, calendar, user network (75% discount available)
 * Google Groups - http://groups.google.com[http://groups.google.com] - free mailing list
 * Yahoo Groups - http://groups.yahoo.com[http://groups.yahoo.com] - free mailing list
 * Wikispaces - http://wikispaces.com/[http://wikispaces.com] - free wiki
-* Blip.tv - http://blip.tv[http://blip.tv] - video hosting
-* Vimeo - http://vimeo.com[http://vimeo.com] - video hosting
+* YouTube - http://youtube.com[http://youtube.com] - video hosting
 
 == Common problems 
 
