fix formatting on contributing page

--- a/content/community/contributing.adoc
+++ b/content/community/contributing.adoc
@@ -169,4 +169,4 @@ See the full <<contributors#,list of contributors>> that have signed the Clojure
 * Yanxiang Lou
 * Zach Tellman
 
-=== _*Many thanks for your contributions to Clojure!*_
+_**Many thanks for your contributions to Clojure!**_
