fix typo, closes #44

--- a/content/about/state.adoc
+++ b/content/about/state.adoc
@@ -8,7 +8,7 @@ Rich Hickey
 :prevpagehref: rationale
 :prevpagetitle: Rationale
 :nextpagehref: dynamic
-:nextpagetitle: Dynamic Devemopment
+:nextpagetitle: Dynamic Development
 
 ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 
