--- a/content/community/resources.adoc
+++ b/content/community/resources.adoc
@@ -7,15 +7,79 @@ Rich Hickey
 
 ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 
+== Clojure Discussion
 
 * http://groups.google.com/group/clojure[Clojure Google Group]
 * #clojure IRC channel on https://freenode.net[freenode.net]
 * http://clojurians.net[Clojurians Slack Chat]
+* http://dev.clojure.org/display/community/Clojure+User+Groups[Clojure User Groups]
+* http://planet.clojure.in/[Planet Clojure] blog aggregator
 * http://dev.clojure.org/display/community/Home[Community Wiki]
 * http://dev.clojure.org/display/doc/Home[Documentation Wiki]
 * http://dev.clojure.org/display/design/Home[Design Wiki]
-* http://clojure-conj.org/[Clojure/conj] conference
-* http://dev.clojure.org/display/community/Clojure+User+Groups[Clojure User Groups]
-* http://planet.clojure.in/[Planet Clojure] meta blog
-* <<swag#,Clojure Swag>>
-* <<companies#,Companies Using Clojure>>
+
+== Tutorials and Learning Materials
+
+Official:
+
+* http://clojure.github.io/clojure/[Clojure API Docs]
+* http://clojure.github.io/[Clojure Contrib Library API Docs]
+* <<xref/../../reference/documentation#,Clojure Reference Docs>> - official reference information
+* <<xref/../../api/cheatsheet#,Clojure Cheatsheet>> - helpful categorization of most core functions
+* Source - https://github.com/clojure/clojure[Clojure], https://github.com/clojure/clojurescript[ClojureScript], https://github.com/clojure/clojure-clr[ClojureCLR]
+* Issues - http://dev.clojure.org/jira/browse/CLJ[Clojure], http://dev.clojure.org/jira/browse/CLJS[ClojureScript], http://dev.clojure.org/jira/browse/CLJCLR[ClojureCLR]
+
+Community:
+
+* <<xref/../../community/books#,Books>>
+* http://www.braveclojure.com/[Clojure for the Brave and True] - a beginner book by Daniel Higginbotham
+* http://aphyr.com/posts/301-clojure-from-the-ground-up-welcome[Clojure from the ground up] - a series of intro articles by Kyle Kingsbury
+* https://github.com/ClojureBridge/curriculum[ClojureBridge Curriculum]
+* http://grimoire.arrdem.com/[Grimoire] - community combined cheatsheet + examples
+* http://clojuredocs.org[ClojureDocs] - community provided example repository
+* http://crossclj.info/[CrossClj] - library cross-reference
+* http://clojure-doc.org/[Clojure Documentation] - community-driven documentation site
+* http://clojurekoans.com/[Clojure Koans] (http://clojurescriptkoans.com/[online])
+* http://www.4clojure.com/[4clojure] - Clojure practice problems
+* http://exercism.io/[exercism.io] - crowd-source code reviews (supports Clojure)
+* https://github.com/bbatsov/clojure-style-guide[Clojure Style Guide]
+* http://planet.clojure.in/[Planet Clojure] - Clojure blog aggregator
+* Newsletters - http://defnewsletter.com/[(def newsletter)] http://www.clojuregazette.com/[Clojure Gazette] http://reborg.tumblr.com/[Clojure Weekly]
+* http://www.clojureatlas.com/[Clojure Atlas] - visualization of Clojure and the core library
+
+Videos and presentations:
+
+* https://www.youtube.com/user/ClojureTV/videos[ClojureTV] - talks by Rich Hickey and presentations from Clojure/conj and Clojure/west
+* http://www.infoq.com/Clojure/presentations/[InfoQ Clojure Presentations] - from a variety of conferences
+* https://github.com/matthiasn/talk-transcripts[Talk transcripts] - Rich Hickey, David Nolen, Stuart Sierra, and others
+* http://www.parens-of-the-dead.com/[Parens of the Dead] - a screencast series writing a game from scratch with Clojure and ClojureScript
+
+Video training (commercial):
+
+* http://www.purelyfunctional.tv/intro-to-clojure[Introduction to Clojure] - Eric Normand (LispCast)
+* http://www.purelyfunctional.tv/web-dev-in-clojure[Web Development in Clojure] - Eric Normand (LispCast)
+* http://shop.oreilly.com/product/0636920030409.do[Clojure Inside Out] - Stuart Halloway, Neal Ford (O'Reilly)
+* http://pluralsight.com/training/courses/TableOfContents?courseName=clojure-fundamentals-part-one[Clojure Fundamentals] - Alan Dipert (PluralSight)
+* http://pluralsight.com/training/courses/TableOfContents?courseName=clojure-concurrency-tutorial&highlight=craig-andera_clojure-concurrency-tutorial-intro*3,8!craig-andera_clojure-concurrency-tutorial-vars!craig-andera_clojure-concurrency-tutorial-atoms!craig-andera_clojure-concurrency-tutorial-agents!craig-andera_clojure-concurrency-tutorial-refs!craig-andera_clojure-concurrency-tutorial-misc#clojure-concurrency-tutorial-intro[Clojure Concurrency] - Craig Andera (PluralSight)
+
+== Clojure Tools
+
+Community volunteers maintain http://dev.clojure.org/display/doc/getting+started[Getting Started] documentation for a number of different tools and approaches. Some of the most commonly used tools include:
+
+* http://leiningen.org/[Leiningen] - an extensible build tool that provides dependency management, REPL support, testing, packaging, deployment, and many other capabilities.
+* http://boot-clj.com/[Boot] - build tooling for Clojure: instead of a special-purpose DSL, Boot supplies abstractions and libraries you can use to automate nearly any build scenario with the full power of the Clojure language
+* http://www.gnu.org/software/emacs/[Emacs] with https://github.com/clojure-emacs/cider[CIDER]
+* http://www.vim.org/[Vim] with https://github.com/tpope/vim-fireplace[Fireplace]
+* https://code.google.com/p/counterclockwise/[Eclipse Counterclockwise]
+* IntelliJ https://cursiveclojure.com/[Cursive]
+* https://sekao.net/nightcode/[Nightcode]
+* http://www.lighttable.com/[Light Table]
+* http://www.sublimetext.com/[Sublime Text] with https://github.com/wuub/SublimeREPL[SublimeREPL]
+
+== Conferences
+
+* http://clojure-conj.org/[Clojure/conj] (usually in November)
+* http://www.clojurewest.org/[Clojure/west] (usually in March)
+* http://euroclojure.com[EuroClojure] (usually mid-year)
+* http://www.clojurebridge.org/[ClojureBridge] - beginner workshops for women
+* http://lanyrd.com/search/?context=future&q=clojure&type=conference[Clojure events]
